
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int ;
typedef int u_char ;
struct stat {int st_size; } ;
typedef int buff ;
typedef int FILE ;


 int fclose (int *) ;
 int fileno (int *) ;
 int * fopen (char*,char*) ;
 int fread (int *,int,int,int *) ;
 int fstat (int ,struct stat*) ;
 int fwrite (int *,int,int,int *) ;
 int std_err () ;

u_int putfile(FILE *fdout, char *fname) {
    struct stat xstat;
    FILE *fdin;
    u_int len,
            tot = 0;
    u_char buff[1024];

    fdin = fopen(fname, "rb");
    if(!fdin) std_err();
    fstat(fileno(fdin), &xstat);

    fwrite(&xstat.st_size, 4, 1, fdout);

    while((len = fread(buff, 1, sizeof(buff), fdin))) {
        fwrite(buff, len, 1, fdout);
        tot += len;
    }

    fclose(fdin);
    return(tot);
}
