; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1239.c_putfile.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1239.c_putfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @putfile(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.stat, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [1024 x i32], align 16
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %8, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32* @fopen(i8* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %2
  %15 = call i32 (...) @std_err()
  br label %16

16:                                               ; preds = %14, %2
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @fileno(i32* %17)
  %19 = call i32 @fstat(i32 %18, %struct.stat* %5)
  %20 = getelementptr inbounds %struct.stat, %struct.stat* %5, i32 0, i32 0
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @fwrite(i32* %20, i32 4, i32 1, i32* %21)
  br label %23

23:                                               ; preds = %28, %16
  %24 = getelementptr inbounds [1024 x i32], [1024 x i32]* %9, i64 0, i64 0
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @fread(i32* %24, i32 1, i32 4096, i32* %25)
  store i32 %26, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %36

28:                                               ; preds = %23
  %29 = getelementptr inbounds [1024 x i32], [1024 x i32]* %9, i64 0, i64 0
  %30 = load i32, i32* %7, align 4
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @fwrite(i32* %29, i32 %30, i32 1, i32* %31)
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %8, align 4
  %35 = add nsw i32 %34, %33
  store i32 %35, i32* %8, align 4
  br label %23

36:                                               ; preds = %23
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @fclose(i32* %37)
  %39 = load i32, i32* %8, align 4
  ret i32 %39
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @std_err(...) #1

declare dso_local i32 @fstat(i32, %struct.stat*) #1

declare dso_local i32 @fileno(i32*) #1

declare dso_local i32 @fwrite(i32*, i32, i32, i32*) #1

declare dso_local i32 @fread(i32*, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
